--- a/main.html
+++ b/main.html
@@ -4,11 +4,15 @@
 </head>
 <style>
 h1{
-color: red
-background-color :gray
+color: white;
+Background-color :gray;
+padding: 10px;
+
 }
 
 </style>
-<body>
+<body background="http://a2.att.hudong.com/16/35/01000000000000119093516170916.jpg">
+background-color: 19fbff
+
 </body>
 </html>
