--- a/main.html
+++ b/main.html
@@ -11,8 +11,8 @@ padding: 10px;
 }
 
 </style>
-<body background="http://a2.att.hudong.com/16/35/01000000000000119093516170916.jpg">
-background-color: 19fbff
+<body background-color:19fbff background="http://a2.att.hudong.com/16/35/01000000000000119093516170916.jpg">
+
 
 </body>
 </html>
