--- a/main.html
+++ b/main.html
@@ -9,9 +9,14 @@ Background-color :gray;
 padding: 10px;
 
 }
-
+    body {
+        background-repeat: no-repeat;
+        background-size:;
+        background ="http://a2.att.hudong.com/16/35/01000000000000119093516170916.jpg";
+        background-color: rgb(19fbff);
+    }
 </style>
-<body background-color:19fbff background="http://a2.att.hudong.com/16/35/01000000000000119093516170916.jpg">
+<body  >
 
 
 </body>
