--- a/main.html
+++ b/main.html
@@ -11,9 +11,9 @@ padding: 10px;
 }
     body {
         background-repeat: no-repeat;
-        background-size:;
-        background ="http://a2.att.hudong.com/16/35/01000000000000119093516170916.jpg";
-        background-color: rgb(19fbff);
+        background-size:1280*1024;
+        background-image ="http://a2.att.hudong.com/16/35/01000000000000119093516170916.jpg";
+        background-color: 19fbff;
     }
 </style>
 <body  >
