--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@ padding: 10px;
     body {
         background-repeat: no-repeat;
         background-size:contain;
-        background-image =http://a2.att.hudong.com/16/35/01000000000000119093516170916.jpg;
+        background-image : http://a2.att.hudong.com/16/35/01000000000000119093516170916.jpg;
         background-color: 19fbff;
     }
 </style>
