--- a/main.html
+++ b/main.html
@@ -11,12 +11,12 @@ padding: 10px;
 }
     body {
         background-repeat: no-repeat;
-        background-size:contain;
-        background-image : http://a2.att.hudong.com/16/35/01000000000000119093516170916.jpg;
+        background-size: contain;
+        
         background-color: 19fbff;
     }
 </style>
-<body  >
+<body background=01000000000000119093516170916.jpg; >
 
 
 </body>
