--- a/main.html
+++ b/main.html
@@ -9,15 +9,18 @@ Background-color :gray;
 padding: 10px;
 
 }
-    body {
+
+    #body {
+        background-image: url('http://a2.att.hudong.com/16/35/01000000000000119093516170916.jpg');
         background-repeat: no-repeat;
         background-size: contain;
-        
-        background-color: 19fbff;
+        background-position: center background-color: 19fbff;
     }
 </style>
-<body background=http://a2.att.hudong.com/16/35/01000000000000119093516170916.jpg >
+<body  >
+    <div id="body">
 
+    </div>
 
 </body>
 </html>
