--- a/main.html
+++ b/main.html
@@ -11,11 +11,11 @@ padding: 10px;
 }
 
     body {
-        <!-- background-image: url('http://a2.att.hudong.com/16/35/01000000000000119093516170916.jpg');-->
+        
         background-image: url('http://img.moegirl.org/common/4/45/%E6%B0%B4%E6%98%9F%E9%A2%86%E8%88%AA%E5%91%98.jpg');
         background-repeat: no-repeat;
-        background-size: auto;
-        background-position: top;
+        background-size: cover;
+        background-position:  top;
     }
 </style>
 <body  >
